processed/jira/txt/LU/LU-17976.txt
Key:        LU-17976
Summary:    error: no previous prototype for 'nla_strnid'
Link:       https://jira.whamcloud.com/browse/LU-17976
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Jian Yu
Reporter:   Jian Yu
Created:    Tue, 25 Jun 2024 22:47:54 +0000
Updated:    Mon, 8 Jul 2024 20:41:29 +0000
Resolved:   Mon, 8 Jul 2024 20:41:29 +0000

--- Description ---
While building Ubuntu 24.04 on master branch, it failed as follows:

  CC [M]  /root/lustre-release/lnet/lnet/api-ni.o
/root/lustre-release/lnet/lnet/api-ni.c:2929:1: error: no previous prototype for 'nla_strnid' [-Werror=missing-prototypes]
 2929 | nla_strnid(struct nlattr **attr, struct lnet_nid *nid, int *rem,
      | ^~~~~~~~~~
/root/lustre-release/lnet/lnet/api-ni.c:9297:5: error: no previous prototype for 'lnet_fault_show_done' [-Werror=missing-prototypes]
 9297 | int lnet_fault_show_done(struct netlink_callback *cb)
      |     ^~~~~~~~~~~~~~~~~~~~
/root/lustre-release/lnet/lnet/api-ni.c:9311:5: error: no previous prototype for 'lnet_fault_show_start' [-Werror=missing-prototypes]
 9311 | int lnet_fault_show_start(struct netlink_callback *cb)
      |     ^~~~~~~~~~~~~~~~~~~~~
/root/lustre-release/lnet/lnet/api-ni.c:9459:5: error: no previous prototype for 'lnet_fault_show_dump' [-Werror=missing-prototypes]
 9459 | int lnet_fault_show_dump(struct sk_buff *msg, struct netlink_callback *cb)
      |     ^~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors

The issue was introduced by the following commit:

commit f1c66236c6869a83f57d07206d845bba42d7cd9f
Author:     Chris Horn 
AuthorDate: Sun Jun 16 09:28:20 2024 -0400
Commit:     Oleg Drokin 
CommitDate: Tue Jun 25 03:23:40 2024 +0000

    LU-10391 lnet: Fault injection add/del ioctls to netlink
    
    Convert the fault injection add/del ioctls to a netlink
    implementaiton.
    
    Test-Parameters: trivial testlist=sanity-lnet
    Signed-off-by: Chris Horn 
    Change-Id: I20f38d4e7c0215a1b19772c6253c617174c0b00c
    Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/53732
    Tested-by: jenkins 
    Tested-by: Maloo 
    Reviewed-by: Serguei Smirnov 
    Reviewed-by: James Simmons 
    Reviewed-by: Oleg Drokin

--- Comment (pjones, Mon, 8 Jul 2024 20:41:29 +0000) ---
Merged for 2.16

--- Comment (gerrit, Mon, 8 Jul 2024 20:12:55 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/55537/

Subject: LU-17976 build: fix nla_strnid() -Werror=missing-prototypes

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 3fe8d551cb945c5ad10ebf6fd6e28915e28a8423

--- Comment (yujian, Wed, 26 Jun 2024 01:22:28 +0000) ---
Is there a way to do just the Ubuntu24 builds by default to avoid this?

I was waiting for the patches for LU-17947, LU-17945, and LU-17948 to land so that I can ask for enabling Ubuntu 24.04 client build on master branch.

However, while landing those patches for 2.15.64, new failures occurred.

Then after the patch for this ticket lands, I'll ask for enabling Ubuntu 24.04 build.

--- Comment (simmonsja, Wed, 26 Jun 2024 00:09:27 +0000) ---
Is there a way to do just the Ubuntu24 builds by default to avoid this?

--- Comment (gerrit, Tue, 25 Jun 2024 23:17:15 +0000) ---
"James Simmons " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/55538

Subject: LU-17976 lnet: handle -Werror=missing-prototypes breakage

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: c9a3bfb8029696425baef545ecdaea602ea850b1

--- Comment (gerrit, Tue, 25 Jun 2024 23:14:07 +0000) ---
"Jian Yu " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/55537

Subject: LU-17976 build: fix nla_strnid() -Werror=missing-prototypes

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 1dc7454db00ccc021879c96698f12290aa73849e

--- Comment (simmonsja, Tue, 25 Jun 2024 23:04:58 +0000) ---
Ah its the all functions must be static or we fail to build issue.

--- Comment (yujian, Tue, 25 Jun 2024 22:50:05 +0000) ---
More errors:

  CC [M]  /root/lustre-release/lustre/obdclass/cl_io.o
/root/lustre-release/lustre/obdclass/cl_io.c:1468:9: error: no previous prototype for ‘__ll_dio_user_copy’ [-Werror=missing-prototypes]
 1468 | ssize_t __ll_dio_user_copy(struct cl_sub_dio *sdio)
      |         ^~~~~~~~~~~~~~~~~~
/root/lustre-release/lustre/obdclass/cl_io.c:1618:5: error: no previous prototype for ‘ll_dio_user_copy_helper’ [-Werror=missing-prototypes]
 1618 | int ll_dio_user_copy_helper(void *data)
      |     ^~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
make[7]: *** [scripts/Makefile.build:243: /root/lustre-release/lustre/obdclass/cl_io.o] Error 1

introduced by:

commit 1fa633c2031c3e34072d5486aeedfbf222091ac7
Author:     Patrick Farrell 
AuthorDate: Wed Apr 24 18:26:04 2024 -0400
Commit:     Oleg Drokin 
CommitDate: Tue Jun 25 03:25:52 2024 +0000

    LU-17478 clio: parallelize unaligned DIO write copy
